--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,7 +1,8 @@
 .card {
   display: flex;
   flex-direction: column;
-  border-radius: 10px 10px 0 0;
+  border-radius: 10px;
+  overflow: hidden;
   margin: 0;
   padding: 0;
 }
@@ -16,7 +17,6 @@
   align-items: center;
   justify-content: space-between;
   background-color: #ffffff;
-  border-radius: 0 0 10px 10px;
   padding: 25px 20px;
 }
 
