--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,6 +2,7 @@
   padding: 45px 0 40px;
   border-bottom: 1px solid rgb(84 84 84 / 0.7);
   box-sizing: border-box;
+  margin: 0 auto;
 }
 
 .header__logo {
@@ -12,6 +13,7 @@
 
 @media screen and (max-width: 480px) {
   .header {
+    margin: 0 auto;
     padding: 28px 0 42px;
     display: flex;
     align-items: center;
