--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,5 +1,6 @@
 .profile {
   margin: 40px auto 51px;
+  padding: 0;
   display: flex;
   align-items: center;
 }
@@ -74,6 +75,7 @@
 
 @media screen and (max-width: 480px) {
   .profile {
+    padding: 42px 0 0;
     flex-direction: column;
     width: 100%;
     margin: 0;
