--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -73,6 +73,11 @@
   cursor: pointer;
 }
 
+@media screen and (max-width: 800px) {
+  .profile__edit-button {
+    margin: 0 20px;
+  }
+}
 @media screen and (max-width: 480px) {
   .profile {
     padding: 42px 0 0;
