--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -6,13 +6,13 @@
   bottom: 0;
   left: 0;
   z-index: 999;
-  display: flex;
-  /* display: none; */
+  /* display: flex; */
+  display: none;
   padding: 0 19px;
 }
 
 .modal__opened {
-  /* display: flex; */
+  display: flex;
 }
 
 .modal__container {
@@ -33,6 +33,7 @@
   margin: 0;
   width: 40px;
   height: 40px;
+  cursor: pointer;
 }
 
 .modal__heading {
