--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -80,6 +80,7 @@
   font-weight: 400;
   line-height: 22px;
   text-align: center;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 800px) and (min-width: 480px) {
