--- a/blocks/card.css
+++ b/blocks/card.css
@@ -45,3 +45,22 @@
   opacity: 0.5;
   cursor: pointer;
 }
+
+.card__like-button_active {
+  background-image: url("../images/like-active-icon.svg");
+}
+
+.card__delete-button {
+  background: transparent url(../images/delete-icon.svg) center no-repeat;
+  border: none;
+  width: 18px;
+  height: 19px;
+  position: relative;
+  top: 30px;
+  left: calc(100% - 30px);
+}
+
+.card__delete-button:hover {
+  opacity: 0.6;
+  cursor: pointer;
+}
