--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -37,6 +37,9 @@
   margin: 0;
   width: 40px;
   height: 40px;
+}
+
+.modal__close:hover {
   cursor: pointer;
 }
 
@@ -84,6 +87,9 @@
   font-weight: 400;
   line-height: 22px;
   text-align: center;
+}
+
+.modal__button:hover {
   cursor: pointer;
 }
 
