--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -41,6 +41,7 @@
 
 .modal__close:hover {
   cursor: pointer;
+  opacity: 60%;
 }
 
 .modal__heading {
@@ -91,6 +92,7 @@
 
 .modal__button:hover {
   cursor: pointer;
+  opacity: 60%;
 }
 
 .modal__container_type_image {
