--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -76,6 +76,10 @@
   padding: 0 0 13px;
 }
 
+.modal__input_type_error {
+  border-bottom: 1px solid #ff0000;
+}
+
 .modal__button {
   margin: 48px 0 0;
   background-color: #000000;
@@ -88,6 +92,12 @@
   font-weight: 400;
   line-height: 22px;
   text-align: center;
+}
+
+.modal__button_disabled {
+  border: 1px solid rgb(0 0 0 / 0.5);
+  background-color: #ffffff;
+  color: rgb(0 0 0 / 0.5);
 }
 
 .modal__button:hover {
@@ -119,6 +129,14 @@
   margin: 0;
   position: absolute;
   top: calc(100% + 10px);
+}
+
+.modal__error {
+  color: #ff0000;
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14.52px;
 }
 
 @media screen and (max-width: 800px) and (min-width: 480px) {
